[project]
name = "Lilex"
authors = [
    {name = "Mikhael Khrustik", email = "misha@myrt.co"},
]
description = "The font for developers."
readme = "README.md"
requires-python = ">=3.13"
version = "v0.0.0"
dependencies = [
    "arrrgs>=3.1.0",
    "glyphslib==6.12.2",
    "pyyaml==6.0.3",
    "fontmake==3.11.0",
    "fonttools==4.60.1",
    "cu2qu==1.6.7.post2",
    "gftools==0.9.95",
    "ruff==0.14.3",
    "pylint==4.0.2",
    "colored==2.3.1",
    "fontbakery==1.1.0",
]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
