[project]
name = "Lilex"
authors = [
    {name = "Mikhael Khrustik", email = "misha@myrt.co"},
]
description = "The font for developers."
readme = "README.md"
requires-python = ">=3.13"
version = "v0.0.0"
dependencies = [
    "arrrgs>=3.1.0",
    "glyphslib==6.13.0",
    "pyyaml==6.0.3",
    "fontmake==3.11.1",
    "fonttools==4.62.1",
    "cu2qu==1.6.7.post2",
    "gftools==0.9.994",
    "colored==2.3.2",
    "fontbakery==1.1.0",
    "shaperglot==1.2.0",
]

[tool.ruff]
lint.select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
